- refactored the inventory columns code - implemented inventory columns editability - implemented the most common use cases of BL_CustomGrid_Model_Grid_Editor_Value_Config as actual methods - fixed the custom columns form - refactored a part of the BL_CustomGrid_Model_Grid_Rewriter_Abstract class - other small fixes

--- a/app/locale/fr_FR/BL_CustomGrid.csv
+++ b/app/locale/fr_FR/BL_CustomGrid.csv
@@ -85,8 +85,8 @@
 "Block Type","Type de bloc"
 "Browser Resize Only","Redimensionnement navigateur seulement"
 "By Default For","Par défaut pour"
-Cannot apply choice : the JS object cannot be found,Impossible d'appliquer le choix : the JS object cannot be found
-Cannot save value : the JS object of the editor cannot be found,Impossible de sauvegarder la valeur : the JS object of the editor cannot be found
+"Cannot apply choice : the JS object cannot be found","Impossible d'appliquer le choix : the JS object cannot be found"
+"Cannot save value : the JS object of the editor cannot be found","Impossible de sauvegarder la valeur : the JS object of the editor cannot be found"
 "Canceled Qty","Qté annulée"
 "Carts Number","Nombre de paniers"
 "Categories","Catégories"
@@ -136,6 +136,7 @@ Cannot save value : the JS object of the editor cannot be found,Impossible de sa
 "Company","Société"
 "Complementary Exceptions","Exceptions complémentaires"
 "Complementary Exceptions Handling Mode","Mode de gestion des exceptions complémentaires"
+"Config Value","Valeur de la configuration"
 "Config Values Prefix","Préfixe des valeurs de la configuration"
 "Config Values Suffix","Suffixe des valeurs de la configuration"
 "Configuration","Configuration"
@@ -294,6 +295,7 @@ Cannot save value : the JS object of the editor cannot be found,Impossible de sa
 "Filter images on name","Filtrer les images sur le nom"
 "Filter Mode","Mode de filtrage"
 "Filter mode shortcut is not enabled (used in ""%s"")","Le raccourci pour le mode de filtrage n'est pas activé (utilisé dans ""%s"")"
+"Filter on ""Use Config Settings""","Filtrer sur ""Utiliser les paramètres de la configuration"""
 "Filter on Item Name","Filtrer sur le nom des articles"
 "Filter on Item SKU","Filtrer sur la référence des articles"
 "Filtered products will have to belong to a number of categories amongst the chosen ones, that can be verified using this value and the one from the ""<strong>Custom Filter - Operator</strong>"" field","Les produits filtrés devront appartenir à un nombre de catégories parmi celles choisies, qui peut être vérifié en utilisant cette valeur et celle du champ ""<strong>Filtre personnalisé - Opérateur</strong>"""
@@ -439,6 +441,7 @@ Cannot save value : the JS object of the editor cannot be found,Impossible de sa
 "Other","Autre"
 "Others","Autres"
 "Overwrite Columns","Ecraser les colonnes"
+"Own Value","Valeur propre"
 "Page Number","Numéro de page"
 "Page Size","Taille de page"
 "Pagination Values","Valeurs de pagination"
@@ -545,7 +548,7 @@ Cannot save value : the JS object of the editor cannot be found,Impossible de sa
 "The collection for the ""%s"" block type was not completely verified, some custom columns may not be working (partially or fully)","La collection pour le type de bloc ""%s"" n'a pas pû être complètement vérifiée, certaines des colonnes personnalisées pourraient ne pas fonctionner (partiellement ou totalement)"
 "The collection for the ""%s"" block type was not completely verified, the corresponding custom columns will not be applied","La collection pour le type de bloc ""%s"" n'a pas pû être complètement vérifiée, les colonnes personnalisées correspondantes ne seront pas appliquées"
 "The columns have been successfully updated","Les colonnes ont bien été mises à jour"
-The context has significantly changed. Refresh the grid before retrying to edit the value.,Le contexte a changé significativement. Rechargez la grille avant de réessayer d'éditer la valeur.
+"The context has significantly changed. Refresh the grid before retrying to edit the value.","Le contexte a changé significativement. Rechargez la grille avant de réessayer d'éditer la valeur.""
 "The copied profile is not available","Le profil copié n'est pas disponible"
 "The custom columns have been successfully updated","Les colonnes personnalisées ont bien été mises à jour"
 "The custom grid has been successfully deleted","La grille personnalisée a bien été effacée"
@@ -561,6 +564,7 @@ The context has significantly changed. Refresh the grid before retrying to edit 
 "The grid block is not valid","Le bloc de grille n'est pas valide"
 "The grid collection is not valid","La collection de la grille n'est pas valide"
 "The grid infos have been successfully updated","Les infos de la grille ont bien été mises à jour"
+"The inventory fields are read-only for this product","Les valeurs d'inventaire sont en lecture seule pour ce produit"
 "The name is not editable for this customer group","Le nom n'est pas éditable pour ce groupe de clients"
 "The new profile could not be created","Le nouveau profil n'a pas pu être créé"
 "The options source has been successfully deleted","La source d'options a bien été effacée"
@@ -575,12 +579,11 @@ The context has significantly changed. Refresh the grid before retrying to edit 
 "The profile has been successfully deleted","Le profil a bien été supprimé"
 "The profile has been successfully edited","Le profil a bien été édité"
 "The profile on which to copy is not available","Le profil sur lequel copier n'est pas disponible"
-"The quantity is not editable for composite products","La quantité n'est pas éditable pour les produits composés"
-"The quantity is not editable for this product","La quantité n'est pas éditable pour ce produit"
-"The quantity is read-only for this product","La quantité est en lecture seule pour ce produit"
+"The quantity increments are not enabled for this product","Les incréments de quantité ne sont pas activés pour ce produit"
 "The requested attribute renderer does not exist...","Le renderer d'attribut demandé n'existe pas..."
 "The requested column type does not exist...","Le type de colonne demandé n'existe pas"
 "The requested custom column does not exist...","La colonne personnalisée demandée n'existe pas"
+"The stock is not managed for this product","Le stock n'est pas géré pour ce produit"
 "The value could not be saved","La valeur n'a pas pû être sauvegardée"
 "There is no removable default parameter","Il n'y a aucun paramètre par défaut à supprimer"
 "There is no value to save","Il n'y a aucune valeur à sauvegarder"
@@ -592,6 +595,7 @@ The context has significantly changed. Refresh the grid before retrying to edit 
 "This custom grid no longer exists","Cette grille personnalisée n'existe plus"
 "This grid does not seem to be compatible with the custom export. If you wish to report this problem, please indicate this class name : ""%s""","Cette grille ne semble pas être compatible avec l'export personnalisé. Si vous souhaitez signaler ce problème, merci d'indiquer ce nom de classe : ""%s"""
 "This grid results can not be exported","Les résultats de cette grille ne peuvent pas être exportés"
+"This inventory field is not editable for composite products","Cette valeur d'inventaire n'est pas éditable pour les produits composés"
 "This options source no longer exists","Cette source d'options n'existe plus"
 "This options source will be used if no options are found for choosen attribute","Cette source d'options sera utilisée si aucune option n'est trouvée pour l'attribut choisi"
 "This profile is not available","Ce profil n'est pas disponible"
